refactor : 도형 추가